# sheetreader-core

./: CMakeLists.txt
src/: copy.cpp  main.cpp
